k8s/backend-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: frontend
spec:
  type: ExternalName
  externalName: backend.backend.svc.cluster.local
  ports:
    - name: http
      port: 8000
      targetPort: 8000
